# peti

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  index.html  package.json  styles.css  vite.config.ts
docs/superpowers/plans/: 2026-06-26-project-planning.md  2026-06-26-ui-professional-pass.md
docs/superpowers/specs/: 2026-06-24-phase1-workspaces-design.md  2026-06-26-project-planning-design.md  2026-06-26-ui-professional-pass-design.md  2026-07-01-landing-page-design.md
site/: CNAME  index.html
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fsview.rs  git.rs  launcher.rs  lib.rs  main.rs  pty.rs  status.rs  window.rs
src-tauri/src/config/: mod.rs  plan_md.rs  scan.rs  settings.rs  snippets.rs  tasks.rs  workspace.rs
src/components/: Background.tsx  BackgroundSwitcher.tsx  CodeViewer.tsx  Dock.tsx  Editor.tsx  FloatingCanvas.tsx  FloatingCard.tsx  FloatingPane.tsx  PaneCard.tsx  PaneGrid.tsx  PetiView.tsx  PromptBar.tsx  Settings.tsx  Switcher.tsx  TaskNote.tsx  Terminal.tsx
src/lib/: alerts.ts  backgrounds.ts  command.ts  ipc.ts  send.ts  theme.ts  wallpapers.ts
src/stores/: sessionsStore.ts  settingsStore.ts  snippetsStore.ts  tasksStore.ts  uiStore.ts  workspaceStore.ts  workspacesStore.ts
