[package]
name = "peti"
version = "0.0.0"
description = "Peti — a calm desktop home for the solo developer juggling many small projects"
authors = ["Arnav Puri"]
edition = "2021"

# The lib is the real entry point; main.rs is a thin shim that calls into it.
[lib]
name = "peti_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
