[package]
name = "peti"
version = "0.1.0"
description = "Peti — a calm desktop home for the solo developer juggling many small projects"
authors = ["Arnav Puri"]
edition = "2021"

# The lib is the real entry point; main.rs is a thin shim that calls into it.
[lib]
name = "peti_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
directories = "6.0.0"
toml = "1.1.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-deep-link = "2.4.9"
